wrong color corrected
targeted text instead of background

--- a/style.css
+++ b/style.css
@@ -17,5 +17,5 @@ img {
   display: block;
 }
 body {
-  color: azure;
+  background-color: azure;
 }
